--- a/dosiraktong/css/style.css
+++ b/dosiraktong/css/style.css
@@ -29,8 +29,18 @@ body {
   font-size: 16px;
   line-height: 1;
   letter-spacing: 0;
-  
 }
+/* 공통요소 */
+.inner {
+  position: relative;
+  display: block;
+  /* 반응형이므로 max /min 써보기 */
+  max-width: 1420px;
+  width: 100%;
+  /* block 요소 가운데 정렬 */
+  margin: 0 quto;
+}
+
 /* 레이아웃 시작 */
 .wrap {
   position: relative;
@@ -39,15 +49,83 @@ body {
 
 /*  상단 시작  */
 .header {
-  position: relative;
+  /* header 는 무조건 z-index 최대값으로 쓰자. */
+  z-index: 999;
+  /* 메뉴가 상단에 고정시킨후 같이 스크롤된다면 fixed 쓰기 따라다니는건 sticky */
+  position: fixed;
+  left: 0;
+  top: 0;
   display: block;
+  width: 100%;
+  height: 100px;
+  background: rgba(255, 255, 255, 0);
+  transition: height 0.5s, background 0.5s;
+  /* all 0.5s 라는 뜻인데 더 명확히 하면 좋다 */
 }
+
+.header .inner {
+  max-width: 100%;
+  height: 100%;
+  /* height 100px 이라고 .header 에서 썼음 */
+}
+/* 
+    left, top, right, bottom 사용시
+    반드시  position:absolute; 쓰자.
+    즉, position:relative; 에는 쓰지말자.
+*/
+.logo {
+  position: absolute;
+  top: 35px;
+  left: 60px;
+  /* a ,span 등등 기본 display:inline; 이다 
+    너비, 높이,margin,padding  설정 못함
+    그래서 최소 inline-block 이라고 해야한다.
+  */
+  display: inline-block;
+  width: 125px;
+  height: 30px;
+  background: url(../images/logo_white.png) no-repeat center;
+  background-size: cover;
+  transition: top 0.5s ease-in, background 0.5s ease-in-out;
+}
+.nav {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+}
+.gnb {
+  /* ul 은 position:relative; 임 안써도됨 */
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+.gnb li {
+}
+/* 스크롤시 CSS 적용 */
+/* .active 클래스는 js 로 생성할거임 */
+.header .active {
+  height: 80px;
+  background: rgba(255, 255, 255, 1);
+}
+.header.active .logo {
+  top: 25px;
+  background: url(../images/logo.png) no-repeat center;
+  background-size: cover;
+}
+.header .active .nav {
+}
+
 /* 상단 끝  */
 
 /*  비주얼 시작  */
 .visual {
   position: relative;
   display: block;
+  width: 100%;
+  height: 100vh;
+  background: url(../images/main_visual_1.jpg) no-repeat center;
+  background-size: cover;
 }
 /* 비주얼 끝  */
 /* 서비스 시작  */
